# scalerhack_round2_teamtds

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  openenv.yaml  pyproject.toml  render.yaml  requirements-training.txt
docs/: BLOG_POST.md  FINAL_SUBMISSION_CHECKLIST.md  FINAL_VIDEO_SCRIPT.md  MINI_BLOG.md  PITCH.md  REWARD_DESIGN.md  SUBMISSION.md  TECHNICAL_PLAN.md  TRAINING.md  YOUTUBE_DESCRIPTION.md  YOUTUBE_PITCH_SCRIPT.md
notebooks/: 00_environment_smoke_test.ipynb  01_baseline_heuristics.ipynb  02_stage1_grpo_operations.ipynb  03_all_stage_rl_controller.ipynb  03_stage2_grpo_passenger_satisfaction.ipynb  04_llm_grpo_all_stages.ipynb  04_stage3_multi_agent_economics.ipynb  05_model_comparison.ipynb  06_demo_replay_export.ipynb
results/: baseline_metrics.json
results/hosted_model_rollouts/: hosted_Qwen_Qwen2.5-Coder-7B-Instruct_stage1_seed7.json
results/llm_runs/: hf_gemma4_31b_it_grpo_summary.json  hf_gpt_oss_120b_grpo_summary.json  tiny_grpo_smoke_summary.json
results/traces/: fifo_stage1_seed7.json  fifo_stage2_seed7.json  random_stage1_seed7.json  random_stage2_seed7.json  random_stage3_seed7.json  recovery_heuristic_stage2_seed7.json  recovery_heuristic_stage3_seed7.json  trace_manifest.json  trained_rl_stage1_seed7.json  (+2 more)
scripts/: evaluate_baselines.py  export_demo_trace.py  generate_pitch_assets.py  llm_rollout_template.py  make_plots.py  run_hf_model_rollouts.py  run_hosted_grpo_job.sh  train_grpo_stage1.py  train_llm_grpo_all_stages.py  train_rl_controller.py
tests/: test_simulator.py
web/: package-lock.json  package.json
(+39 files in other folders)
