[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "runway-zero"
version = "0.1.0"
description = "OpenEnv-style airport crisis recovery environment for LLM agents"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.6",
  "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.5",
]
training = [
  "transformers>=4.44",
  "datasets>=2.20",
  "trl>=0.9",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
extend-exclude = ["notebooks"]
